Make map draggable

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           center: {lat: 20.5937, lng: 78.9629},
           zoom: 2,
           disableDefaultUI: true,
-          draggable:false,
+          draggable: true,
           zoomControl: true,
         });
         //Set map style
